<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ic_header_profile"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_side_menu" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_notification" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="-60dp"
        app:cardBackgroundColor="@color/white">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="50dp"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bg_blue"
        android:textSize="18dp"
        android:text="@string/nama"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="Blood type : O"
        android:layout_gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="0.1dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tl"
                android:layout_marginStart="80dp"
                android:textSize="22dp"
                android:textColor="@color/bg_blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BLOOD GIVE"
                android:layout_marginStart="60dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ser"
                android:layout_marginStart="60dp"
                android:textSize="22dp"
                android:textColor="@color/bg_blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BLOOD RECEIVED"
                android:layout_marginStart="30dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tigati"
                android:layout_marginStart="40dp"
                android:textSize="22dp"
                android:textColor="@color/bg_blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="THANKS"
                android:layout_marginStart="35dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginEnd="200px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_search_donor">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search donor near you"
                android:layout_gravity="center"
                android:textSize="12dp"
                android:textColor="@color/gray">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginEnd="70px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_blood_needed">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needed"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4 User need blood"
                android:layout_gravity="center"
                android:textSize="12dp"
                android:textColor="@color/gray">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="200px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_message">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 New Messages"
                android:layout_gravity="center"
                android:textSize="12dp"
                android:textColor="@color/gray">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginEnd="70px"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_donor_history">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 Gives, 2 Received"
                android:layout_gravity="center"
                android:textSize="12dp"
                android:textColor="@color/gray">
            </TextView>
        </LinearLayout>

    </GridLayout>


</LinearLayout>